--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "string-lib",
+  "name": "check-the-forecast",
   "version": "1.0.0",
-  "description": "A JS library for strings.",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
